Closed
Bug 142096
Opened 23 years ago
Closed 23 years ago
Message Security box does not display all recipients
Categories
(MailNews Core :: Security: S/MIME, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: pratik.solanki, Assigned: KaiE)
References
Details
(Whiteboard: [adt1 rtm])
Attachments
(1 file, 1 obsolete file)
|
1.29 KB,
patch
|
javi
:
review+
mscott
:
superreview+
jud
:
approval+
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.0.0+) Gecko/20020502
BuildID: 2002050221
If I have both To and CC receipients then the message security box does not
display information for everyone. It just seems to display information for all
CC receipients or all To receipients, not both
Reproducible: Always
Steps to Reproduce:
1.Compose a new message with 1 to and 1 cc address
2.Click on Message Security icon
3.
Actual Results: just the cc or To is displayed in Certificates box
Expected Results: Both To and CC should be displayed
Now Change the to to cc and press Message Security. You'll see that both the
receipients are displayed
Comment 1•23 years ago
|
||
Confirmed - Not sure when or how this was introduced, but it is not working at
the moment.
looks like an addressing widget integration issue.
Variance of the test case:
Have two rows with 'To' recipients
Have two rows with 'cc' or 'bcc' recipients
result - you will see three of the entries
Proposed we fix for RTM, adt2 or 3?
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: nsbeta1
OS: Linux → All
Priority: -- → P3
Version: 1.01 → 2.3
| Assignee | ||
Comment 2•23 years ago
|
||
I can see the bug on the branch, too.
I hope this will be a simple fix, I think the parser needs to care for " in the
lines.
| Assignee | ||
Comment 3•23 years ago
|
||
Argh.
| Assignee | ||
Comment 4•23 years ago
|
||
Actually I like this patch better.
Attachment #83537 -
Attachment is obsolete: true
| Assignee | ||
Updated•23 years ago
|
Summary: Message Security box does not display all receipients → Message Security box does not display all recipients
Comment 6•23 years ago
|
||
Comment on attachment 83545 [details] [diff] [review]
Patch v2.
r=javi
Attachment #83545 -
Flags: review+
Comment 7•23 years ago
|
||
Comment on attachment 83545 [details] [diff] [review]
Patch v2.
sr=mscott
Attachment #83545 -
Flags: superreview+
| Assignee | ||
Comment 8•23 years ago
|
||
Checked in to trunk.
| Assignee | ||
Updated•23 years ago
|
| Assignee | ||
Comment 10•23 years ago
|
||
Raising priority to ADT 1.
I think most people using S/Mime will eventually run into this bug, because it
is highly likely to use both To and CC recipients.
Whiteboard: [adt2 rtm] → [adt1 rtm]
Comment 11•23 years ago
|
||
adt1.0.1+ (on ADT's behalf) approval for checkin to the 1.0 branch, pending
Driver's approval. Pls check this in tonight, and add the fixed1.0.1 keyword.
Updated•23 years ago
|
Attachment #83545 -
Flags: approval+
Comment 12•23 years ago
|
||
please checkin to the 1.0.1 branch. once there, remove the "mozilla1.0.1+"
keyword and add the "fixed1.0.1" keyword.
Keywords: mozilla1.0.1 → mozilla1.0.1+
Comment 14•23 years ago
|
||
Verified on 20020606 Branch builds. It does display all recipients now. As far
as I can tell, it displays their status correctly as well (not found/invalid/valid).
If the status display is incorrect for any reason in the future, this should be
filed as a separate bug.
This bug is specific to displaying all recipients regardless of recipient type,
and nothing else.
Keywords: fixed1.0.1 → verified1.0.1
You need to log in
before you can comment on or make changes to this bug.
Description
•